edusweep: Use richtextbox on About form
This allows for link detection and hopefully fixes issue #14

--- a/EduSweep 2/Forms/About.resx
+++ b/EduSweep 2/Forms/About.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="textBoxLicenseInfo.Text" xml:space="preserve">
+  <data name="richTextBoxCredits.Text" xml:space="preserve">
     <value>EduSweep:
     Author: Paul Beesley
     Web: https://github.com/paulbeesley3/EduSweep
@@ -181,7 +181,8 @@ ObjectListView Library
 TrIDLib Library
     Author: Marco Pontello
     Web: http://mark0.net/code-tridlib-e.html
-    License: see TrIDLib-License.txt</value>
+    License: see TrIDLib-License.txt
+</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBoxLogo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
