studio: Sort listview by Category on load

--- a/Signature Studio/Forms/FormMain.resx
+++ b/Signature Studio/Forms/FormMain.resx
@@ -127,67 +127,67 @@
   <data name="toolStripButtonNew.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJRSURBVDhPrZNLiFJRHMYvtJhVtE1a1SqCYZjNtGwTFRG0
-        iKFNgcVUMG6iTYuCodVMNTUp6cp8jJiogzgqijdFUTcuHB854qAOMw4+uOIojq98fd1zuoNNObTpg8O5
-        53J+3/+c738v81/ldDqnWJad54fF5XKlDAZDn3/3w+FwROx2u9Fms90wmUxnhO0n5fF4rrjd7ngsFkO5
-        XMbR0RGGwyEGgwGq1Sr29vYQCASwsbERNBqNFwRsLB727e/vYzQa4TT1+31Eo1HwBloBG4s34Lrd7j8N
-        OI6DTqfjBGws/s5cp9NBqVRCrVZDu92mQK/XQ71ex+7uLoLBIIrF4mQDq9XKEahSqdDNqVQK29vbiMfj
-        FOQzgt/vR6FQON2g1Wrh8PCQVsnn83QmuUQiERogGQcHB9BoNJMNms0mvSOBcrkc3UxOEw6H4fV64fP5
-        qLFKpZpsQFpHMiDwzs4ObV0mk0EoFIL86zu8UDzE04938WDp+ujmy+nXAvpLFouFazQatEI6nab3z2az
-        9PmzYQVvzI/gSMoRK7JY+7aI+2vTmJOIVgWcYfgPhDtOO5lMIpFI0OokTPHbW9j8/gmbKRlt56rnCdY8
-        zzAjOdcRcIYhyRKYXIOAvxvceTULZ1JJ4WPZEnJclYgg4Ayj1+tv86O5tbVFP10SKOkKma89v4T37GMs
-        s2IKL7vFf5+AaH19/SLfoi9qtbqu1WphNpvB/1BYWJrHvdXL+MAu0MpkJusTGfwppVJ5VqFQzMpkshmp
-        VDo1t3h+ZVYiapBjk5msGYZhfgK9UkfOB+MOUQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJRSURBVDhPrZJPaJJhHMdf6LBTdE061SmCMbysY5eoiKBD
+        jC4FLlbBvESXDgWj01ZZS0lPtulERR2yqTh8cyjqZQfnn1QU3fAP/uEV/6BOlzq/vc/TO2y10aUvPDzv
+        8/J8vr/n+f4e5r/K6XROsCw7ww/r1tZWwmAwDPh/PxwOR9But5tsNtsts9l8Tth+Um63+5rL5YqEw2FU
+        KhW0220cHR1hOByiVqshm83C5/NhfX3dbzKZLgnYWDzsyeVyGI1GOEuDwQChUAi8gVbAxuINuMPDw38a
+        cBwHnU7HCdhY/J25Xq+HcrmMRqOBbrdLgX6/j2azif39ffj9fpRKpdMNNjY2OAJVq1W6OZFIIB6PIxKJ
+        UJDPCF6vF8Vi8WyDg4MD1Ot1WiWfz9OZ5BIMBmmAZBQKBWg0mtMNOp0OvSOB9vb26GZymp2dHWxvb8Pj
+        8VDjlZWV0w1I60gGBE6lUrR16XQagUAASsN7vFQ9xrNP9/Fo4ebo9qvJNwL6S1arlWu1WrRCMpmk989k
+        MvT7i3EJby2zcMSUCJdYLH+bx8PlSUxLRTIBZxj+gXDHacdiMUSjUVqdhCl5dweb3z9jM6Gg7ZS5n2LZ
+        /RxT0gs9AWcYkiyByTUI+LvBvddiOGNqCh/LFlXiulQEAWcYvV5/lx+d3d1d+nRJoKQrZL7x4go+sE+w
+        yEoovOiS/H0CorW1tct8i76urq42tVotLBYLjEYj5hZm8EB2FR/ZOVqZzGR9IoM/pVarz6tUKrFCoZiS
+        y+UT0/MXl8RSUYscm8xkzTAM8xOyP0fLDg46jwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButtonEdit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKiSURBVDhPhZJdSFNhGMeFLrrsrosKoi66SMIu8s6bikTr
-        oi6SIkkvhK7qJgjNIgRxNUdmpFmiZa6BW2PYHJtbY63NkFPt07O5tU33UW4c20f7Opv7+HfO6egQFH/w
-        cuC87+9/nud5T90marV6v06na2OWQqPRuGdmZkrMu6JKpbLMzc1JlUpls0wm28cf345erz+p1Woddrsd
-        sVgMmUwGlUoF5XIZ8XgcwWAQJpMJcrncLJVKD/NaDUb+HAqFUK1WsRulUgk2mw1MwDteq8EEUIVCYc8A
-        iqIgFospXqvB9EzRNI1oNIpkMol8Ps8JGxsbSKVSWFlZgdlsxtra2s4Bs7OzFCutr69zh91uN1wuFxwO
-        BycyM4LRaESE/ACP5Dp8Hwdgn2yGfbS+Yysgl8shkUhwXwmHw9yTnYvFYuEGaDUIETV0I+VUAZnfSDrl
-        MA22xLYCstks1yMrBQIBRCIRrhqCIEDohIiTfShGlIgaRcgvKVAOLsA2fIveCmCvjp0BK3u9Xu7qfD4f
-        LMYxJMiHqOQXkA/cRvzbHSyLu2Afv/aHeHHlBBegUCiodDrNle7xeLj+/X4/vD/eI7F0HxV6ETl/J+hw
-        O9LuXqyONsVszy6c5mQW5gehNqdNkiScTidshteIfu/m5Q7QoRv4Sz4AIWiuLg81nuHV/7BXw8psG2zZ
-        xPxLuLX3mLJNoFe7UAjfRIqp5OdYC0YEfXFeqyGRSC4yK2u1WmHVTcCl7oVDM4xfRBtyq+2I23uwPHYJ
-        o4OPKIFA0Mhr25menj42NTU1KROeB9JBeMavwtB7CF9ftULf31SZEN59IxKJDvLHd6e/82ipuDiCIvEc
-        xMBZvO08kpnvrm/gt/fmcsMB+jETonjSWvr09NwXVc+p4/zWDtTV/QN6Tl/ptf/w0QAAAABJRU5ErkJg
-        gg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKjSURBVDhPhZJLTBNRFIZJXLh050JNjC5cSAwuZMdGjQR0
+        oQuJRiIsSFzpxsSAaAwJoVoaRSOIElCkNqS1Nlialtam1haDo/bJtLS2hT6UNoN92Ne09PE7Mw40JBi+
+        5GaSuff755xzp24DtVq9W6fTtTFLodFo3NPT0yXmXVGlUllmZ2elSqWyWSaT7eKPb0Wv1x/VarUOu92O
+        WCyGTCaDSqWCcrmMeDyOYDAIk8kEuVxulkql+3mtBiN/DIVCqFar+B+lUgk2mw1MwGteq8EEUIVCYccA
+        iqIgFospXqvB9EzRNI1oNIpkMol8Ps8J6+vrSKVSWF5ehtlsxurq6vYBMzMzFCutra1xh91uN1wuFxwO
+        BycyM4LRaESEfAuP5DJ87wdgn2iGfaS+YzMgl8shkUhwXwmHw9yTnYvFYuEGaDUIETV0I+VUAZlfSDrl
+        MA22xDYDstks1yMrBQIBRCIRrhqCIEDohIiTfShGlIgaRcgvKlAOzsM2dI3eDGCvjp0BK3u9Xu7qfD4f
+        LMZRJMi7qOTnkQ9cR/zrDSyJu2Afu/SbeHrhCBegUCiodDrNle7xeLj+/X4/vN/fILF4GxV6ATl/J+hw
+        O9LuXqyMNMVsQ2eOczIL84NQG9MmSRJOpxM2wwtEv3Xzcgfo0BX8Ie/gy0BzdelR4wle/Qd7NazMtsGW
+        Tcw9g1t7iynbBHqlC4XwVaSYSn6MtmBY0BfntRoSieQss7JWqxVW3Thc6l44NI/xk2hDbqUdcXsPlkbP
+        YWTwHiUQCBp5bStTU1OHJicnJ2TC00A6CM/YRRh69+Hz81bo+5sq48KbL0Ui0V7++P/p7zxYKi4Mo0g8
+        ATFwEq86D2Tmuusb+O2dOd+wh77PhLx70Fr68PDUJ1XPscP81jbU1f0FaZBf4pFvmmgAAAAASUVORK5C
+        YII=
 </value>
   </data>
   <data name="toolStripButtonDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJiSURBVDhPrZI7aFNRHMavTUonB3ERtENdhC7iLPhoo4PQ
-        Tam4qiCIIKJtdXFzUESSIVObNA2lSRtDaNK8TExIMlgkT5LQ0iTmYdJyQ5OQ5mXz+Dzn5EoVU1z84M+5
-        XM7vO+f//Q/3X2U2m0fsdvsdUnqLxRLXaDRt8u+HyWTyG41G7fr6+s3V1VWRsP1PORyOcZvNFg6FQtjb
-        28PBwQG63S46nQ729/eRTqfh8Xig0+m8Wq32rIAdicCuTCaDXq+H49RutxEMBkEMVAJ2JGLAt1qtfxrw
-        PA+1Ws0L2JFIz3yz2cTu7i7K5TIajQYDDg8PUalUkEql4PV6USgUBhsYDAaeQsVikW2Ox+OIxWIIh8MM
-        JBnB7XYjn88fb1Cv11Eqldgp2WyWrTQXv9/PAqSVy+WwuLg42KBWq7EeKZRMJtlmepvNzU04nU64XC5m
-        rFAoBhvQ0dEMKLy9vc1Gt7OzA5/Ph8/vnsJ17zwck8MwXz3dtUqG5gS0L71ez1erVXbC1tYW6z+RSLBv
-        z4fnCL24jObGe/TiVtQ1z/D18Xjn06T4iYBzHHkg/K+0o9EoIpEIO52Gab99Dg0CQzYFzJ4C3oyh+PYa
-        Nq6LUgLOcTRZCtM2KPi7gWNiGD2/XngNfZVfn8HHCXFPwDlueXn5FqlaIBBgT5cGSqdCV9fdUdQW7gME
-        as1wKJHKPBLBekP0XcD7WlpaGiMjWlAqlRWVSoW1tTWsrKxANzONLw8voDA7Bv7lMJIPTsB5RdyxSIZe
-        Cejfmp+fPymXyy/JZLKLUql0xDs9OmebFH2j17ZJRLk+zHE/ASLIRmQ/UBgtAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJhSURBVDhPrZM7aFNRHMavTUsnB3ERtENdhC7iLKK21UHo
+        plRcVRBEENG2urg5KCLJkKlN8yDEpCGEPvIy8Yakg0HyKkloaRPzMEm5oUlI8zKvz3NOrkSxxcUP/tzL
+        5fy+c/7f/1zuv8pisYw6HI47pExWqzWm0+na5NuP9fV1/9ramn51dfWmwWCQiMv/lNPpnLDb7eFQKIT9
+        /X0cHh6i2+2i0+ng4OAAyWQSHo8HRqPRq9frz4rYQATmU6kUer0ejlO73UYwGAQxUInYQMRAaDab/zQQ
+        BAEajUYQsYFIz0Kj0UA+n0epVEK9XmdAq9VCuVxGIpGA1+tFLpc72sBsNgsUKhQKbHEsFkM0GkU4HGYg
+        yQhutxvZbPZ4g1qthmKxyHZJp9PsSXPx+/0sQFqZTAZKpfJog2q1ynqkUDweZ4vpaXw+H1wuF3ieZ8YK
+        heJoAzo6mgGFd3Z22Oh2d3exubmJz++egr93Hs6pEViunu7apocWRLQvk8kkVCoVtsP29jbrf29vj717
+        PjxH6MVlNDbeoxezofbxGb4+nuh8mhp+IuIcRy6I8CvtSCSCra0ttjsN03H7HOoEhmwGmD8FvBlH4e01
+        bFyXJESc42iyFKZtUPB3A+fkCHp+k3gb+iq9PgPj5HBPxDlOq9XeIlUNBALs6tJA6VTok787hurSfYBA
+        zTkORVKpRxLYbki+i3hfarV6nIxoaXl5uaxSqbCysgLyQ8E4N4svDy8gNz8O4eUI4g9OwHVluGOdHnol
+        on9rcXHxpFwuvySTyS5KpdJR7+zYgn1K8o0e2z4tyfRhjvsJFpZGXq7lmNgAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="toolStripButtonRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJtSURBVDhPldPrS1phHAdwob/DRbO10WTQhZpd5oQuq7QL
-        poMk88kMh11ksZa5rDxp5ZllpVar5WqxRi2QBbPd2jJJapeWDPa6dxH0dvTuOz0+FG5jrM+7H7/z5Tk8
-        33N4/+P208ouxbIiiY7nJ/WWRMrGJLN0/Lu7mxq+4U2DsellXUC1qjyqe1YN+VwFZN5i6J9r0LigQl5P
-        los+nsjwtlGkf632M1smjO8OY/abG3P7HkzvueD+9BCjO4MYDPWh1lMJYUvaAI3F3VnX8HWvVP6RHRsW
-        v89g6usoHu2Nw/PZCdfuENhtBraQBb2bJkidpRDoUhw0Gte0pjJaPtzDfGQKs3tuOMN26JbUuGkXIc+S
-        jazOa6hylaGcLUYqSZ6gsTP1K/LA8FYfd6IjxEDMFh4UWnOcdM1J1QoiAs0FHx0TyZ/cOqyavn5SMib5
-        KbbnHxf0ZTN0dSqlgW/mKXhJ6uVaolyoJDUzZUQ6ISFFbAHhST1FpMQpJmK7iIgs2SSjU0hinbcHtWaa
-        P6WYlzEyd+lx7LCc3pyTgt6MQ7pK1PZR69Ov10foyJE/LnfK3MUHI9v2aCtD6Fxrj96PMEDXZ1o3yIQt
-        bEZ/8D7UK7WIfoWIvjIML7Rgtxiu0uFtK5ST1bjammaksTjDO42DCZmw9GOOq9QXmUyo1Brs5irVLtYj
-        3XDJL9AI+DQa17RWN/DgfQd8+16uUu+XUYztOsCGbejf6EbLqg414xW4ok/1CxqTRTSWSDkvdbX5m6Ff
-        JihiC3GDyUWuOROZHelHwpbLgbTmi8Y/Tv5d7MeR2PITLvFcYjWKerK66PgPPN4vlBgzBhpvhuYAAAAA
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJtSURBVDhPldPdS1phHAdwob/DRbO10WRQRmEvc0LWKu0F
+        00GS+WSGQytZrFUuezlp5ZllpVar5WqxRi2Qgtne2kopai8tGey6uwi6Hd19p8eHwm2M9bn78TtfnsPz
+        PYf3P+48K29XLamS6Hhxcl9RpGRUOkPHv7u3qeOb3tRZGlZrgpoV9XHN80ooZ8ug8MlgfKFD/bwGuV0i
+        N308keltvdj4WhtgQh0Y2xvCzDcPZg+8mNp3w/PpEUZ2BzAQ7kG1txxCc1o/jcXdXdfxDa80geFdOxa+
+        T2Py6wge74/B+9kF994g2G0G9rAN3ZsdkLuKITCkOGk0rmFNY7F9uI+5yCRm9j1w7ThgWNTilkOMXFsW
+        RG03UOEuQSkrQypJHqexc7XLyuBQqIc70RlmIGELDgv6sl10zUnVCyIC3SU/HRMpn94+qpjKOS0alf6U
+        OPJO8nuyGLo6k1LHt/JUvCTtUjVRz5eTqukSIh+XkkI2n/Dk3kJS5JIQiUNMxLYsktEmJLHOW7b0Vpo/
+        o5pTMApP8UnssOzu7NP87owjukrU/FHvN67XRujIUT4pdSk8ssPhbUe0lUG0rbVE70cYpOtzTRtk3L5j
+        Re/WA2iXqxH9ChF9ZZhe6sGGGK7Soe0+qCcqcb0pzUJjcaZ3OicT7sDij1muUn9kIqHSvq1OrlL9Qi3S
+        TVcCAp2AT6NxDWs1/Q/ft8J/4OMq9X0ZweieE+yOHb0bnTCvGFA1VoZrxtSAoD5ZTGOJ1HNyd3OgEcYl
+        gkK2ADeZHORYM5HZmn4sNF8NpjVetvxx8u9iP47UnpdwiRcSq1HcJWqn4z/weL8AkdYzBUbZb9kAAAAA
         SUVORK5CYII=
 </value>
   </data>
