edusweep: Add extensions and keywords via dropdown

--- a/EduSweep 2/Forms/TaskDesigner.resx
+++ b/EduSweep 2/Forms/TaskDesigner.resx
@@ -123,13 +123,122 @@
   <data name="label2.Text" xml:space="preserve">
     <value>Scan tasks are reusable profiles containing a list of target directories that will be scanned, along with a list of signatures that control which files are detected. Tasks are shown in the main window when ready.</value>
   </data>
+  <metadata name="toolStripTargets.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>366, 17</value>
+  </metadata>
+  <metadata name="toolStripSignatures.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>672, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolStripButtonAddSignature.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJRSURBVDhPrZJPaJJhHMdf6LBTdE061SmCMXZZxy5REUGH
+        GF0KLFbBvESXDgWj01ZZpqQnc/7B1CniVBTfFEW9eHBTc6I4ZU504x3+wTld/vv2Pk/vsNVGl77w8LzP
+        y/P5/p7n+3uY/yqPxzPBsuwsP+xerzdjNpv7/L8fbrc77nK5LE6n88bKysoZYftx+f3+Kz6fL5lIJLC7
+        u4v9/X0Mh0MMBgPUajVsbW0hHA7DZrNFLBbLBQEbi4eDpVIJo9EIp6nf72N9fR28gU7AxuINuMPDw38a
+        cBwHg8HACdhY/J25breLnZ0dNBoNdDodCvR6PTSbTRSLRUQiEVSr1ZMNHA4HR6C9vT26OZPJYGNjA8lk
+        koJ8RgiFQqhUKqcbHBwcoF6v0yrb29t0JrnE43EaIBnlchlarfZkg3a7Te9IoEKhQDeT08RiMQQCAQSD
+        QWqs0WhONiCtIxkQOJfL0dbl83lEo1Eov77DC9VDPP14Fw8Wro9uvpx8LaC/ZLfbuVarRStks1l6/83N
+        Tfr92bSEN9ZHcKeVSFRZyL7N475sEjMSkVTAGYZ/INxR2ul0GqlUilYnYYrf3sLq909YzShoO6X+J5D5
+        n2FKcq4r4AxDkiUwuQYBfze482oanrSawkdyppS4KhFBwBnGaDTe5kd7bW2NPl0SKOkKma89v4T37GMs
+        smIKL/rEf5+ASK/XX+Rb9GV5ebmp0+lgtVphMpkwtzCLe9LL+MDO0cpkJutjGfwptVp9VqVSTSsUiim5
+        XD4xM39+aVoiapFjk5msGYZhfgLIZUfRKYBouQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="extensionToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAKASURBVDhPpZLbS5RRFMW//6HsYhBBEL300EOXhxDC
+        Bwu6QBOU0WWy1FS0gkjEHpTMC+po6aBmmmZ4tzTHzFHLRCwJS9RMHTV1dLyMjjqO12b8deZ0sYeBiD5Y
+        HNbmW3uvs85WgP+Cy+K/wGXxX6BElEziCneKxgl9auJGzjBBmcP4pA3hndzPqfgejt7rxiOii32h7cgG
+        1W3zf8BK5cc5yj/MUtoyQ2GzhbzGabIbzGTUTpJaPU6SzkRc+Qg7Q1rXGxQ1z5DfNMOTRgvZb6ZIrzOT
+        8moCjW6c2HITkaVGwguGuZU3SEj2ABHFw7j7tPxoUPXJisVm57EQTs9/w7bswLbkYH7JTovBJpqM0Wta
+        4m6Zka6RRXEdA7fzvrLFuwklrMAk7S4IUbp+UooTKsckjyg2MmpZQddqkVxTOcriioMzSd0EZ/ez6UQD
+        SogIqfCdBbtjTUx0sLy6Ju3axHSnXePUCmbrqmwc/czI5Nwqx+M+45fRi5tnPYoz3dy3U9JuVNko1kW7
+        SH9I8oDMfgbNy7zumCVHX8h17SX8NCc5G+XF6ehoNhyqRlFpDDJdpzAsf4i5BTtBWf2SX0ztZWBiiQua
+        FCJLLqPr1NJm0pNUGyiusYddKjWKZ1QXyVVjv9P1f9iHWmvg3P0eVIlfpN3zMUeo6EimouuB2B1IqPMl
+        qc6f/QHbUZzLEPN8REwQz1Q4JNO9mTtAcFYf1zIMXEnr5Vj4Xl52PpLiX9+Ldi0HgraiOJdhm28L7ur3
+        4lma2axqlOm6edXjdriWjR41HAzcQbzehxi9WopjatTrDgT/K8SkKFXCbhL1V+Vk5+nkop7gUuAK4udY
+        AavT9s8zFlC+A4C++1WT4cweAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="keywordToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAALvSURBVDhPY/j//z8cq826y5O26tHOuj0v3k079vrv
+        hEOvftbvfP4+afGD0/KlFxSQ1cIwhoBy702PuuNvbh57+u3/0cff/jvOvLtKLv+8pkzmGUZ0tSCMwlHq
+        vMGoP+HmxEVXPny0nnJ7Ue7WZxctO68vkkk+LYysDhmjcBQariRuvPn5l3bdlX7Z7LMWVTue33abcHOL
+        dPYla83mW3PMe+8dNOm8u9uk9c5us9ZbBzVLry1DaK66rFqy88XVmaffvZFJO2MmHX9SZ8rB16/9p9w+
+        IJ15wVm54uZkn3mPP2dvfPE/c82L/zqlN9aJx14ogxtg1HJ15ubrn/7MO/nuw4QDr17MOPj67YGbn/7H
+        zrp7RszrgJx+w631AfMe/XPqvXs3cdmT/xLR55vFws+yMQADiAUYQLFLzrz77Dftzl7J0KOREoGHg8X9
+        DuZN3fPibcrsu5clE85mxCx5+t+27e5loK3uEXMf/5eJOt8LspgBGEB62WseX5p04NUriaAjhjAXiXru
+        VU+acedixqx7D9wm33/vNuHeS7Go89ZAW4MiZz78r5p4YRnYgI6dz79PO/jqf/PWZ1+SZ9zeBhIUcd9j
+        HNxz4+SyQ2/+R0+69z9xyZP/YhFna8FyIae9w6fe/6+dfGEL2AAQgQsDnRsTPf/x/+RFT/6nzpj/P2dK
+        /P+0Pv//Ua0e/21yi28Ieh0RxqoRhMWjz5tZ19+87NV795tvdf3pxtWJ/7dcmfr/wrNd//t3Z/0P79f9
+        b5yuMw+rZhDWzL60JmHeo/9iwSebY9tdvm+8POH/xmuTgFL///fsSf3fvyf9v3m21A8MjcBAMhYNPVPs
+        3nbng0fbna/CfieCfaoN/2+7MgcojQCbLk0FGiCJqhmE3TvvfvLtu/vft+fOf5+OO/+N0i4es8yR/t69
+        K+l/+64EoJL//9t3JoBdYJEtj2kANgy0qSW4R+N/764UsM0gGsQHivdg1YANAxV3APEnkLOhdMf///8Z
+        AOWUlUnP4/+nAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="toolStripButtonAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ/SURBVDhPrZP9T1JRGMfv36K1fohqmdmrmy+1dLPlZM73
+        dIYmEoJmJepFDAW5JE5ThJnZWlACjaUg4AtLnZkTtZSWemW6FqzW1lYwf/12b11jTmtr67Od357P95zn
+        OecQ/x1qoja2zSMllU4xrRgWhhtelIdvPy+la6zFpPjp1ViubH+osWq+2l0derLYjfnQNPxflrD4eQ7u
+        gB1NHjGEppxQ2UAWnyvfDSurXJLI2IYdW983MPFxBCa6D4/W9LBvmjDz6SWoKRmK+zMjhcaM3SHqMWmM
+        yiUNutYt2Pi2iv7VLtxfaIPO1wK9X4sePwXdshKuLTtIjwjZhrRglj41htOZALdE3jvbivdfl5kde9C9
+        QkHzugk7tC7I0DgtgnxWAuemDTkPLyKjM0nO6QShdIjpkYCNOaoZ9+aboZprhGyiitOBSlsB7oyX4OZo
+        IYxvteiaUeCS7jzN6QQhH6rY9n4YQe87LSPXc9pepO48yCeFsPj7kUKd2uZ0gqi3C7aHA4Oglkg0+25x
+        5XthA0jvdVj9D5CoPhENqLWV0AYfBf2KBvWvRJBOXkOZNZvTfonsqvEUoNfXinZvA860HIu2IBkskldY
+        +XAELJBNClDtLf7Z8w6sXOXMRa2rEI51M1I7TiO+mRcdotCUH1P+ODtIeioxRD/7PTBWlDjZxcoFGF4z
+        4YYlH/F3ecEjTQej18hSOnCFX9R3OVLnEMDJhBh8apDj5WgcFcAwr4KDkUWWXMQrDkeOk4f2f415xnQ+
+        v+dCKNOYjI4pEuY3epiX9NB465DSnsDIvNAf5R0yO5Nj03WJZKr2LJ2kORk+p44LJyiP0nEKHhnXcODv
+        n+nfIYgfINbPt+vLFx0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="toolStripButtonAddFile.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALcSURBVDhPVZFJTFNhFIW70qVrVkbjwpAowagY3RAiqEhC
+        IqJxYRhk0kaJMS6MEhBRQAooCYYEo65YaIgyBtoCYWhpFaRCaasCpQwFWip0/Nu+luN9f8t0k5P7/sX5
+        7rn3ScRKfjaYnVajUaTLNP9SSjU+6oyrVuxall4zylKrVfoLj4ffxmZ+PsBNe+vKy5Fhm4utm5fXQg6P
+        Hw73rtZdohiMVhdK2hdwS2byXr7ffTBqjdTVKpVtccUeGp0PQmsRoF0QoJkXoDIHMPjXjx6DB34B6DT5
+        UPLNgjsNet8+SEppj8/pDWB8MYSfiwJ1AT84JIChGT/kBi8Bwhi3hqBdDqKiewFJT/pbonZKUK1mImCC
+        ALolARNLIQ77bgliZDYA5W8fzGsevoqbCVjb8CK5eEiI2iOATU8AUzRBT5paCeMXh4gpgjyFglJ06d3o
+        mHRik+6UUj7ConaJJLVKzTYIYFzZgoHM0yS9NYxJgo3RTUbNEUjfHx8UdIcNTxApL9S7gCsEcBDAtLrF
+        ZSQZCDa1HEnCIZRkmNYRQQ4CJJfvAVyqULN1dwCGHXN4J4kIEe8yRuuISdQkmyuIpLI9gORyFbPT/xan
+        bps5gNbYTvFR2YpHTdkoqEtHzutUXJRKd4+YVKZiq04/ppcjsSOiY5JEc3NPC55/yUGnvhE6qxz1inu4
+        WX8CZ6UxMg5ILB5h1k2GzE4/bnQyXO9iyKDvjHY/rnUw3K5KRdvUG7QZGiCWTJmPemUh4qSHImvEFQ+y
+        RQfDg6EwPpmAD0ag2QA0UX9HPe1pPLr177l5u9onG5EgjQEHnHs44NXNWLeKBsIo7Ashv19AXn+IK5fe
+        54uPokaei0p5NjdX9mbvT3CqSDlncXpdutnV8JzdhzmbDzNR2d1B1LW+QobsOGrleXyy2MX3zg1OF/VK
+        4/J6lPEFCkdcwVe2o/yITpKOZWUJCdIjPHas9HDozN3EbolEIvkPWzPHK5P/Gn0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="toolStripButtonRemove.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJhSURBVDhPrZP9S1NhHMXv3zKLYIIE5Q9FCBVJburcZtO1
+        zZvcurgtYxGmKbvDNIMaCzX6IdRSe9VMiGm2IDI1wRy9KCrdFerarUmtzd29ppy2dcOGMwg6cH47n/Pw
+        fJ/vQ/x3LVVXZy0aDOYPNM26SDL4PuEFUsfOURrzTEVZlhDLLLfRqGQNBu5buw3RsWeIzUwj9mocvL0P
+        yyYabyuUnFMrUwrxdCVhV1UVvzrQh3XXAuKOh4j3tiLeeRk/7ndgbdIBb4MJE/JCfkqdn16ypNeLXDTt
+        Cd7txTo7i/j1i/C3WhCw1SN61YJYG4Oo9Syiw/fgPkVhUnnIM6Y4KBJwgljU65mVJjPWZp2pEyPtDHyX
+        ahBuPpnm4DkK0cFbeCPLw4vSPEbACeJjYmChwduI93fCb63FV7I0o1drKfC2RngtdXgu38sKOEHMUlQ4
+        9mQQ8XYL/BdM2EpedRF8hgoEOq9hJD87LODJAjIc6e9GtMWE8PkqIb5ZyYIVWotAR7JAvFEwT5azPmsj
+        Iq0Mgmd0qWBGa2TwNzVguaEGDknOH1cgyxhWJUW4vwf+4yr4aMUmmCsvBHdUgVDvDYyX7MaIRLwxxHeV
+        CtFrndLjNlYi9KA7NbAVbckvUF0MTpWAVSXge7owd6wUQwVij126feMZk3KqC5UT8gJ+8YQWoTvd+N7C
+        wEtp8Fmnhq/ZDP5mF+Z1cgxIRPxQwY7M2ziZ2LCXRw5w04p9+FJfA1/blZQ/1Z3GaNEuPJJkc1vCvzVe
+        tj9rVLbH/FSey9oluUG7ZGfQXpzDPpaKzcOHt/39M/27COInZwvSijO8OGgAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="label4.Text" xml:space="preserve">
     <value>Choose whether to enable or disable integration with ClamAV for this task. If antivirus integration is disabled globally (from the Settings window) when the scan task is started then this setting will be ignored.</value>
   </data>
   <metadata name="toolStripTargets.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>366, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="toolStripButtonAddPath.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -193,95 +302,6 @@
         19j6Q13M7YMJX32h+qNfD9HGdFDEPIE8nIpZUt3+XgJN06aj+uQFK+L3anJw+1udHN1PdtE7Fcdjpyub
         g/1jbfA2l4nPKwrKrKN/rpfVpy97Hl0Uwo4mjN4qla3Pf6dnFQfKxuhTivPu2d1d/Jso6iuYciOObRud
         LgAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <metadata name="toolStripSignatures.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>672, 17</value>
-  </metadata>
-  <data name="toolStripButtonAddSignature.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJPSURBVDhPrZJLiFJRHMYvtJhVtE1a1SqCYZjNtGwTFRG0
-        iKFNgcVUMG6iTYuCodVMNTUp6cp8jJiogzgqijdFUTcuHB854qAOMw4+uOIojq98fd1zuoNNObTpg8O5
-        53B+3/+c73+Z/yqn0znFsuw8PywulytlMpn6/N4Ph8MRsdvtRpvNdoPfOyMcPymPx3PF7XbHY7EYyuUy
-        jo6OMBwOMRgMUK1Wsbe3h0AggI2NjaDRaLwgYGPxsG9/fx+j0Qinqd/vIxqNgjfQCthYvAHX7Xb/acBx
-        HHQ6HSdgY/Fv5jqdDkqlEmq1GtrtNgV6vR7q9Tp2d3cRDAZRLBYnG1itVo5AlUqFHk6lUtje3kY8Hqcg
-        nxH8fj8KhcLpBq1WC4eHh7RKPp+nM8klEonQAMk4ODiARqOZbNBsNukbCZTL5ehhcptwOAyv1wufz0eN
-        VSrVZAPSOpIBgXd2dmjrMpkMQqEQ5F/f4YXiIZ5+vIsHS9dHN19OvxbQX7JYLFyj0aAV0uk0fX82m6Xf
-        nw0reGN+BEdSjliRxdq3Rdxfm8acRLQq4AzD/yDccdrJZBKJRIJWJ2GK397C5vdP2EzJaDtXPU+w5nmG
-        Gcm5joAzDEmWwOQZBPzd4M6rWTiTSgofy5aQ46pEBAFnGL1ef5sfza2tLfrrkkBJV8h87fklvGcfY5kV
-        U3jZLf77BkTr6+sX+RZ9UavVda1WC7PZDIPBgIWledxbvYwP7AKtTGayPpHBn1IqlWcVCsWsTCabkUql
-        U3OL51dmJaIGuTaZyZphGOYn3otH1zik4NMAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="toolStripButtonAddExtension.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ+SURBVDhP3VLdS5NRHH7/h1o5gwiC6KYLL1pdhBBeWNAH
-        tKCMPtZKzQ2tIBKxi0lrU5ybpUPNXJqh86s0Z+arlg5ZjbBEbenmltvch5u+6pzO2ebT+54+7CKo6x44
-        HB44z/N7znMO9R9A1hLAn9adJj9yn3pxo9YFabUL4gon0krtOFU8iaP3JpAss2B/7iiIQffI8m8rhM4P
-        S2h/v4hW8wL0Jgb1xnnoBoKo6g2gvNsPjcGLovYZ7M4Z3jRoMi2gYWgBT4wMdG/mUNkXRNmrWagNfhS2
-        e1HQ6kZ+owu36qeRo3NA1uxCotj83aDrYwhMOIbHrHB++SvCa3GEI3EsR2Iw28KsiQ9WbwR329ywzKyy
-        17Hhdv0XJKQNgcpr9JK4K6yokg4QsarTR7is2Q0PE4VhmCFc3enBajSOM5oJZOvs2HZiAFQOW5L+LYNY
-        fIOdGMfa+gaJG2anc3Hdc1EEQ+vEWPHMjcDSOo4XfUJGlRW8lH5QXLt1g3MkrrzNg9BqjG3fSXhWtR3T
-        wTW8HltELa3Hde0lZKhP4qw8FacVCmw51A1KqLaRdjlhXoMTSysxSGvshF8st8IxG8EFdRkKWi7DMK7F
-        iJeGplfCXmMf9ghFoFLkFpR2+X61m/lwCiKtDefuT0JY8pnEPa88go6xUnRYHoCDqi8dmr5MCLJ2guI+
-        g/L5DDuBfSa9k7R7s86B7JopXKuy4UqFFcfyk/By/BER/8SLUS0OSPmguM+wI92MRNE79llM2C40knZ5
-        qf3gHe7F1uQeHJTsQjEthpIWEbGyR7SZ4F8gkPDlQtVelNBXyWRu57hAylf9OPJ3CCQJhUlSfoiLze0c
-        pyiK+gbzNzAMFdlJhwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="toolStripButtonAddKeyword.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALuSURBVDhPhZF7SJNhFMY/IfqrCLxPpYUS5ipNhSkpGGRT
-        al5wiqnzspy3bRSUJeS1zAvqdM5pLkrBRKgssYbhLV0yS+ecum/uruV1zmtaWlGd2vrCwFi/fw7PeZ/n
-        PeflRf6GwEMP0B/NdOZ169fq+qa+c/qWvmS9XFxPfDgtxmdJj2A287iwlcE5ohXV4Pw2iGa34Qxf+xh/
-        ReKGIGCBWcwAYOHBUVbfG9/4cJqramIJFsZ9SxRNDvFDVpjDPPgClNauWvhKyEOrHNNHfG8KFjTnOAoB
-        jiXzc72tuu/D1gq9SjXdXkWabmKRWuiWKW/BogjinCM/mtmpl/PFhhWnNDHRiTp8gitcXg6t0fQ7MMbP
-        Omcpa843TG8x2/WQ0aoHwnXFMzuq9AYWR5BThXL+C3T+W8PA2kZZv0HP61ta7VdtArVeN4IjDxx2L1C3
-        hVfLfwSU6XS0ljmwixstJESh+xEkv2+fY/pwfOPQ2lYoT92LixLF2IcJKXah/Zd5PfpVOl8ns0+UpFOb
-        58G/WCeziR8LuvhgFhxjR9mmyY7JEvf01tkJbo/B4EAReZqav7AK6nWl1avHU+tV70g1inUSZ2rJJlbq
-        ZxMtiYjhvweXROnv95e2Le7UCQ2Q/1T7MfmuusPYsya98o4onxxqeb0CcdwpoDXPgW20ONd0Fim+EF07
-        DYTkMYFRm8U2QUqNa5yF5KY5SKlvBBYvEVIrwyC2KBj8mVeVB8PNfK9djJTol6OSkQrQbXJ2rvjWExoI
-        0FoYW+iCqm4GRFedBO+04w2YfS9uGROtSQ0zYEN5WxheErjTLuNA+yQXjFT0pEBVTxoQEyw/Y/ZdrKMk
-        3laR4mtB+ehGQLHykyX5DYWc7Qkd6H1T+A/PJ2rBh4kDLLZLYL5uM6RSByEVWiCXasGLPjbowTq0U951
-        CUq6kkzhks4k0wa+TPzeC/4FkYG7Q6k4BuwuummysRo1kYmrwCz/h8iwL/Vk4jaNaxurUSMIgvwEk4CP
-        cqUzzSsAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="toolStripButtonAddFile.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALcSURBVDhPVZFdSJNxFMZ3VZddexV1ESGUGJVRNyJpaYKQ
-        WXQRfuRXDROJLqJEM0vNqSUYglFdeVFI+YluU1G3uZWmzTlXmXPqpk6Xuq//tnfz6bz/za8DD+f9Xzy/
-        85zzSsRKfDqUlVqrVaTJtP+SyrRe6oyrTuw6llY7ylJq1IZLj0beRGd8OsRN+yv5hWrE7mTrluW1oMPt
-        g8O1p3WnKIYZmxOlHQu4LTN5rhb1HI5Yw3WtWm23rjqCo/MB6CwCdAsCtPMC1GY/hv740Gt0wycAXSYv
-        Sr9acLfR4D0ASSrr8255/BhfDOLHokBdwHcO8WN41ge50UOAEMZtQeisAVT2LCDh8UBrxE4JajRMBEwQ
-        YHJJwMRSkMO+WQJQ/fVD+csL86qbr+JiAlY3PEgsGRYi9jBg0+3HFE0wkKaWQ/jJIWKKAE+hoBTdBhc6
-        9VvYpDslVahYxC6RpFRr2AYBZpa3YSTzNMlgC0FPsDG6yag5DOn/7YWC7rDhDiDpuWYPkEwABwFMK9tc
-        MyQjwaas4SQcQklGaB0R5CBAYsU+wJVKDVt3+WHcNYd2k4gQ8S5jtI6YREOyOwNIKN8HSKxQszX63+LU
-        HTMH0Bo7KT4o2/CwOQv59WnIfpWCy0VFe0dMKFezlS0fpq3h2GHRMUmiuaW3Fc8+Z6PL0IRJmxwNivu4
-        1XAK56VRMg6IL1Yx2yZDRpcPN7sYbnQzpNN3eocP1zsZ7lSnoH3qNdqNjRBLpsxDg7IAMdIj4TViiofY
-        ooPhwXAIH03A+xmgxQg0U39LPfVJLHoM77h5pzr0TYiTRoEDLpQMevRzK9uFgyEU9AeRNyAgdyDIlUPv
-        i8XHUSvPQZU8i5ur+rIOJjhTqJyzbHmcerM9NLfmxZzdi9mI1lwB1Le9RLrsJOrkuXyy2MX37g3OFvZJ
-        Y3J7lbH5CkdM/he2q7ywTpNOZGYKcdJjPHa09Gjw3L34HolEIvkPnSvHTBlwbY8AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="toolStripButtonRemove.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJjSURBVDhPrZP9S1NhHMXv3zKLYJEE5Q9FCBVZ29S5lzaX
-        mze5dXFbxiKWpuwO0wxKDDX6IdRSe9VSiGlmEJmaUEovikp3xXTt1katzd3NbSmnbd1Y4gyCDpzfzuc8
-        PN/n+xD/XQsVFVkuk8n2gaZZJ0mG3ic8TxrYWarENl2qzRJimeU2m1WsycR9a21CdPQpYtOTiL0aA+/o
-        waKFxttSFTell6uE+FolYWd5Ob/0oAerznnEh/sQ725GvP0Sftxrw8rEMLw1Fowr8/mXury1JQtGo8hJ
-        057QnW6ssjOIX7uAQLMdwaZqRK/YEWthEG08g+jgXbhPUphQHfCMKveLBJwgXEYj46uzYWVmKnXicisD
-        /0UrIvUn1jh0lkK0/ybeyHPxXJ3LCDhBfEwMLNx/C/HedgQaK/GVVGf0UiUFvqkWXnsVnil2swJOEDMU
-        FYk97ke81Y7AeQs2kldXAL+pFMH2qxjK2xYR8GQBGVnu7US0wYLIuXIhvl7JAh+tR7AtUXBQnC6YI4tZ
-        f2MtlpsZhE4bUsGMLpEjUFeDxRorhqXZf1yB1DKsRoZIbxcCxzTw08p1MFecD+6IEuHu6xgr2okhqTg9
-        xHdlStFrg8rjNpchfL8zNTCfvugXqCsEp0nAmiLwXR2YParGgETsccg2p58xqSldvmpcIeFdx/UI3+7E
-        9wYGXqoEnw06+Ott4G90YM6gQJ9UxA9ItmTexonEhr04vI+bVO7Bl2or/C2XU/5UdQojBTvwULqV2xD+
-        rTHt3qwR+S7bE0UO65DmhBzS7SFHYTb7SCa2DR7a9PfP9O8iiJ9w49KPHfKRFQAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="timerPathCheck.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
